libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__tuple__tests__parse_empty_tuple.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/tuple.rs
description: Parses an empty tuple
expression: "{\"#tuple\": []}"
---
Expr#4294967040@1
  ExprKind (Tuple)
    TupleExpr#4294967040@0
