libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__tuple__tests__parse_invalid_tuple_value.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/tuple.rs
description: Rejects non-array values for tuples
expression: "{\"#tuple\": {\"not\": \"an-array\"}}"
---
[31m[parser::object::tuple-expected-array] Error:[0m Expected array for #tuple definition
   ╭─[ <unknown>:1:12 ]
   │
 1 │ {"#tuple": {"not": "an-array"}}
   │            ┬  
   │            ╰── Expected an array here
   │ 
   │ Help: The #tuple construct requires an array of elements, but found `{`. Use square brackets to define the tuple elements: [element1, element2, ...]
   │ 
   │ Note: Tuples in J-Expr represent fixed-size ordered collections where each position can have a different type.
───╯
