libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__tuple__tests__parse_tuple_with_literals.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/tuple.rs
description: Parses a tuple with heterogeneous literal values
expression: "{\"#tuple\": [{\"#literal\": 1}, {\"#literal\": \"text\"}, {\"#literal\": true}]}"
---
Expr#4294967040@7
  ExprKind (Tuple)
    TupleExpr#4294967040@6
      TupleElement#4294967040@1
        Expr#4294967040@1
          ExprKind (Literal)
            LiteralExpr#4294967040@0
              LiteralKind (Integer)
                IntegerLiteral (1)
      TupleElement#4294967040@3
        Expr#4294967040@3
          ExprKind (Literal)
            LiteralExpr#4294967040@2
              LiteralKind (String)
                StringLiteral (text)
      TupleElement#4294967040@5
        Expr#4294967040@5
          ExprKind (Literal)
            LiteralExpr#4294967040@4
              LiteralKind (True)
