libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__tuple__tests__parse_tuple_with_single_element.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/tuple.rs
description: Parses a tuple with a single element
expression: "{\"#tuple\": [{\"#literal\": \"solo\"}]}"
---
Expr#4294967040@3
  ExprKind (Tuple)
    TupleExpr#4294967040@2
      TupleElement#4294967040@1
        Expr#4294967040@1
          ExprKind (Literal)
            LiteralExpr#4294967040@0
              LiteralKind (String)
                StringLiteral#4294967040@0 (solo)
