libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__tuple__tests__parse_tuple_with_type.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/tuple.rs
description: Parses a tuple with type annotation
expression: "{\"#tuple\": [{\"#literal\": 1}, {\"#literal\": \"text\"}], \"#type\": \"Tuple<Int, String>\"}"
---
Expr#4294967040@17
  ExprKind (Tuple)
    TupleExpr#4294967040@4
      TupleElement#4294967040@1
        Expr#4294967040@1
          ExprKind (Literal)
            LiteralExpr#4294967040@0
              LiteralKind (Integer)
                IntegerLiteral (1)
      TupleElement#4294967040@3
        Expr#4294967040@3
          ExprKind (Literal)
            LiteralExpr#4294967040@2
              LiteralKind (String)
                StringLiteral (text)
      Type#4294967040@16
        TypeKind (Path)
          Path#4294967040@16 (rooted: false)
            PathSegment#4294967040@15 (name: Tuple)
              GenericArgument#4294967040@10
                Type#4294967040@9
                  TypeKind (Path)
                    Path#4294967040@9 (rooted: false)
                      PathSegment#4294967040@8 (name: Int)
              GenericArgument#4294967040@14
                Type#4294967040@13
                  TypeKind (Path)
                    Path#4294967040@13 (rooted: false)
                      PathSegment#4294967040@12 (name: String)
