libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__tuple__tests__parse_unknown_key_in_tuple.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/tuple.rs
description: Rejects unknown keys in tuple objects
expression: "{\"#tuple\": [], \"unknown\": {\"#literal\": \"value\"}}"
---
[31m[parser::object::unknown-key] Error:[0m Parser
   ╭─[ <unknown>:1:16 ]
   │
 1 │ {"#tuple": [], "unknown": {"#literal": "value"}}
   │                ────┬────  
   │                    ╰────── Unrecognized key `unknown`
   │ 
   │ Help: This J-Expr object only accepts these specific keys: `#type`
───╯
